# tasksquatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_06_22_0001_initial_schema.py  2026_06_22_0002_add_task_deleted_activity_event.py
docs/: architecture.md  mcp-setup.md  notifications.md  release.md  spec.md
scripts/: smoke-all.sh  smoke-cli.sh  smoke-mcp.sh  smoke-web.sh
scripts/lib/: smoke-helpers.sh
src/tasksquatch/cli/: _context.py  _parsers.py  _resolvers.py  app.py  rendering.py
src/tasksquatch/core/: __init__.py  _sentinels.py  db.py  errors.py  ids.py  paths.py  recurrence.py  seed.py
src/tasksquatch/mcp/: _guard.py  _session.py  server.py  tools.py
src/tasksquatch/notify/: config.py  notifier.py  runner.py
src/tasksquatch/rest/: app.py  dependencies.py  errors.py
src/tasksquatch/tui/: __init__.py  _session.py  app.py
src/tasksquatch/web/: router.py
test-plans/: README.md  manual-mcp-plan.md  manual-notify-plan.md  manual-tui-plan.md  manual-web-plan.md  manual-wheel-install-plan.md
tests/: test_release_artifacts.py  test_smoke.py  test_smoke_scripts.py
tests/cli/: test_app_smoke.py  test_find_cli.py  test_label_cli.py  test_project_cli.py  test_rendering.py  test_tasks_cli.py
tests/core/: test_alembic.py  test_db.py  test_ids.py  test_paths.py  test_recurrence.py
tests/core/models/: test_activity_append_only.py  test_cascade_behavior.py  test_inbox_seed.py  test_schema_create.py  test_task_number_allocation.py  test_task_relationships.py
tests/core/services/: _helpers.py  conftest.py  (+12 more)
tests/mcp/: conftest.py  test_guard.py  test_tools_register.py  test_tools_smoke.py  test_tools_validation.py
tests/notify/: conftest.py  test_config.py  test_notifier.py  test_runner.py
tests/rest/: conftest.py  test_activity_routes.py  test_app_smoke.py  test_comments_routes.py  test_error_handlers.py  test_labels_routes.py  test_projects_routes.py  test_schemas.py  test_tasks_routes.py
tests/tui/: conftest.py  test_fuzzy_filter.py  test_project_list.py  test_search.py  test_session.py  test_task_detail.py  test_task_edit.py  test_task_list.py
tests/web/: conftest.py  test_accessibility.py  test_create.py  test_delete.py  test_edit_flow.py  test_index.py  test_partials.py  test_static.py  test_toggle.py
(+55 files in other folders)
