[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasksquatch"
version = "0.1.0.dev0"
description = "An offline-first, local-only todo tracker. The tracker that hunts down your tasks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Adam Reese", email = "areese801@gmail.com" },
]
keywords = ["todo", "cli", "tui", "mcp", "tasks", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "textual>=0.60",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "uuid-utils>=0.9",
    "python-dateutil>=2.9",
    "rapidfuzz>=3.6",
    "desktop-notifier>=5.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-textual-snapshot>=0.4",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "freezegun>=1.5",
    "types-python-dateutil>=2.9",
]

[project.scripts]
tasksquatch = "tasksquatch.cli.app:app"
tasksquatch-mcp = "tasksquatch.mcp.server:main"

[project.urls]
Homepage = "https://github.com/areese801/tasksquatch"
Repository = "https://github.com/areese801/tasksquatch"
Issues = "https://github.com/areese801/tasksquatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tasksquatch"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
